added myself as an author

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -15,3 +15,9 @@ slorber:
   title: Docusaurus maintainer
   url: https://sebastienlorber.com
   image_url: https://github.com/slorber.png
+
+bestrazer:
+  name: BestRazer
+  title: PiHosting Founder
+  url: https://pihosting.cloud
+  image_url: https://external-preview.redd.it/uQW2BuZwv-OastErdy8kW7gKwhtQ3SOHjQf7pjH66d4.png?auto=webp&s=5d4abb090b3ad14d24afa2cc173e8f486d11fc84
