capitilization or whatever

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -16,7 +16,7 @@ slorber:
   url: https://sebastienlorber.com
   image_url: https://github.com/slorber.png
 
-bestrazer:
+BestRazer:
   name: BestRazer
   title: PiHosting Founder
   url: https://pihosting.cloud
