--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -18,6 +18,6 @@ slorber:
 
 BestRazer:
   name: BestRazer
-  title: PiHosting Founder
-  url: https://pihosting.cloud
+  title: ServerStellar Founder
+  url: https://ServerStellar.cloud
   image_url: https://external-preview.redd.it/uQW2BuZwv-OastErdy8kW7gKwhtQ3SOHjQf7pjH66d4.png?auto=webp&s=5d4abb090b3ad14d24afa2cc173e8f486d11fc84
